fixed scrollbar wiggle problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
   height: auto;
 }
 
