--- a/app/ui/header.module.css
+++ b/app/ui/header.module.css
@@ -15,6 +15,7 @@
   z-index: 0;
 }
 .animationWrapper {
+  width: 100%;
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
